# clerk

./: .gitignore
client/: login.py  main.py  network.py
db/: create_structs.sql  db.env  docker-compose.yml  down.sql  load.bat  up.sql
server/: Cargo.toml  Rocket.toml
server/src/: db.rs  http.rs  json.rs  lib.rs  main.rs  models.rs  schema.rs  services.rs  ws.rs
