[package]
name = "clerk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152" }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"

